Refactored bad code